# code2pdf

./: .gitignore  CHANGELOG.md  README.md  enhanced_cv.md  example-config.json  pyproject.toml
.github/workflows/: ci.yml
docs/: MULTI_PROFILE_TEST_RESULTS.md  README.md  WEBSITE_ENRICHMENT.md
examples/: README.md  demo_real_enrichment.py  mcp_firecrawl_integration.py  production_example.py
generated_cvs/Anastasios084_2025-06-22/: Anastasios084_cv_professional.html  Anastasios084_cv_professional.md
generated_cvs/AngelPn_2025-06-24/: AngelPn_cv_professional.md
generated_cvs/WilliamEspegren_2025-06-24/: WilliamEspegren_cv_professional.md
generated_cvs/adoumas_2025-06-24/: adoumas_cv_professional.html  adoumas_cv_professional.md
generated_cvs/dfwteinos_2025-06-22/: dfwteinos_cv_professional.html  dfwteinos_cv_professional.md
generated_cvs/dirkbrnd_2025-06-24/: dirkbrnd_cv_professional.md
generated_cvs/manuhortet_2025-06-24/: manuhortet_cv_professional.md
generated_cvs/nikosmav_2025-06-22/: nikosmav_cv_modern.html  nikosmav_cv_professional.html
generated_cvs/nikosmav_2025-06-24/: nikosmav_cv_professional.md
generated_cvs/production_enhanced/: nikosmav_enhanced_cv.html  nikosmav_enhanced_cv.md
generated_cvs/torvalds_2025-06-22/: torvalds_cv_minimal.html  torvalds_cv_minimal.md
my_custom_folder/: nikosmav_cv_minimal.md
src/code2pdf/: __init__.py  cli.py  config.py  generator.py  github.py  mcp_integration.py  parser.py  website_enrichment.py
src/code2pdf/template/: base.html  resume.tex
src/github_scraper/: __init__.py  __main__.py  cli.py  config.py  generator.py  github.py  mcp_integration.py  website_enrichment.py
src/github_scraper/plugins/: __init__.py  deeper_signals.py  linkedin_enrichment.py
src/github_scraper/template/: base.html  deeper_signals.md  linkedin_enrichment.md  profile_readme.md  styles.css  styles_modern.css
tests/: README.md  __init__.py  test_deeper_signals.py  test_firecrawl_integration.py  test_github.py  test_linkedin_enrichment.py  test_multiple_profiles.py
